src/test/ui/rfc-2632-const-trait-impl/specialization/non-const-default-const-specialized.stderr
error[E0277]: the trait bound `(): ~const Value` is not satisfied
  --> $DIR/non-const-default-const-specialized.rs:30:31
   |
LL | const ZERO: u32 = get_value::<()>();
   |                               ^^ the trait `~const Value` is not implemented for `()`
   |
note: the trait `Value` is implemented for `()`, but that implementation is not `const`
  --> $DIR/non-const-default-const-specialized.rs:30:31
   |
LL | const ZERO: u32 = get_value::<()>();
   |                               ^^
note: required by a bound in `get_value`
  --> $DIR/non-const-default-const-specialized.rs:11:23
   |
LL | const fn get_value<T: ~const Value>() -> u32 {
   |                       ^^^^^^^^^^^^ required by this bound in `get_value`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
